bug fixes and playAgain method